<resources>
    <string name="app_name">Car Expenses</string>
    <string name="all_ok">Ok</string>
    <string name="all_done">Done</string>
    <string name="all_date">Date</string>
    <string name="all_delete">Delete</string>
    <string name="all_not_implemented_yet">Not Implemented Yet</string>
    <string name="all_l">L</string>
    <string name="all_traffic">Traffic</string>
    <string name="all_fuel">Fuel</string>
    <string name="all_note">Note</string>
    <string name="all_highway">Highway</string>
    <string name="all_mixed">Mixed</string>
    <string name="all_consumption">Consumption</string>
    <string name="all_l_100_km">L/100km</string>
    <string name="all_city">City</string>
    <string name="all_asterisk">*</string>

    <string name="refill_list_refills_title">Refills</string>
    <string name="refill_list_filter_title">Filter:</string>
    <string name="refill_list_filter_cleared">Filter Cleared</string>
    <string name="refill_list_summary_title">Summary:</string>
    <string name="refill_list_summary_text">Avg: %1$dl/100, dist: %2$dkm, %3$dl, %4$dUAH</string>
    <string name="refill_list_all_summary_text">AvgLPG: %1$dl/100, AvgPetrol: %2$dl/100\nDist: %3$dkm, Money: %4$dUAH</string>
    <string name="refill_list_create_backup_menu">Create Backup</string>
    <string name="refill_list_restore_backup_menu">Restore Backup</string>

    <string name="refill_details_title">Refill Details</string>
    <string name="refill_details_title_new_entry">New Entry</string>
    <string name="refill_details_l_per_100km">L/100</string>
    <string name="refill_details_last_distance">Last Distance</string>
    <string name="refill_details_current_mileage">Current Mileage</string>
    <string name="refill_details_0_l_100km">0 l/100km</string>
    <string name="refill_details_add_note">Add Note</string>
    <string name="refill_details_liters">*Liters</string>
    <string name="refill_details_money">*Money</string>

    <string name="title_lpg">Lpg</string>
    <string name="title_petrol">Petrol</string>
    <string name="title_all">All</string>
    <string name="all_not_implemented">Not Implemented</string>
    <string name="cancel">Cancel</string>
    <string name="grand">Grand</string>
    <string name="message_restore_db_data_will_be_available_after_restart">Restored data will appear after Application restart</string>

</resources>
